Replace IOUtils.toString()