@@ -33,7 +33,6 @@ import java.nio.charset.Charset;
 import java.util.Arrays;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-import org.apache.commons.io.IOUtils;
 
 /**
  * Utilities for the Windows Platform.
@@ -120,8 +119,8 @@ public class WindowsUtil {
         Process mklink = execCmd("mklink", "/J", junction.getAbsolutePath(), target.getAbsolutePath());
         int result = mklink.waitFor();
         if (result != 0) {
-            String stderr = IOUtils.toString(mklink.getErrorStream(), Charset.defaultCharset());
-            String stdout = IOUtils.toString(mklink.getInputStream(), Charset.defaultCharset());
+            String stderr = new String(mklink.getErrorStream().readAllBytes(), Charset.defaultCharset());
+            String stdout = new String(mklink.getInputStream().readAllBytes(), Charset.defaultCharset());
             throw new IOException("Process exited with " + result + "\nStandard Output:\n" + stdout + "\nError Output:\n" + stderr);
         }
         return junction;
